# cloud-streaming-args-debugger

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  audio_capture.cpp  audio_capture.hpp  cli_args_debugger.cpp  cli_args_display.hpp  log_manager.cpp  log_manager.hpp  path_info.cpp  path_info.hpp  run_local_tests.bat  run_tests.bat  seh_wrapper.cpp  setup-dev-tools-mac.sh  setup-dev-tools.bat  tests.cpp  validate.bat  validate.sh  vcpkg.json
.github/workflows/: build.yml  lint.yml
tests/: CMakeLists.txt  README.md  audio_peak_tests.cpp  audio_tests.cpp  buffer_safety_tests.cpp  cli_args_tests.cpp  data_persistence_tests.cpp  fps_calculation_tests.cpp  logging_tests.cpp  memory_safety_tests.cpp  path_info_tests.cpp  path_utils_tests.cpp  qr_code_tests.cpp  seh_exception_tests.cpp  string_conversion_tests.cpp
